@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-13T00:36:47Z",
-  "count_outdated" : 1776,
-  "uniques_outdated" : 537,
-  "count" : 1802,
-  "uniques" : 553,
+  "timestamp" : "2022-09-13T08:10:40Z",
+  "count_outdated" : 1777,
+  "uniques_outdated" : 538,
+  "count" : 1803,
+  "uniques" : 554,
   "clones" : [
-    {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 5,
@@ -86,6 +79,13 @@
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
