@@ -3,11 +3,6 @@
   "uniques": 6,
   "clones": [
     {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 5,
       "uniques": 3
@@ -60,6 +55,11 @@
     {
       "timestamp": "2022-09-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
