@@ -1,3 +1,11 @@
+2022-09-13T08:10:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3043393493
+* notice: last 14d: unq all: 6 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 537 1776 / 553 1802
+* notice: next accum: outdated-unq outdated-all / unq all: 538 1777 / 554 1803
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-08-30] / [2022-09-13]
+
 2022-09-13T00:36:47Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3041552239
 * notice: last 14d: unq all: 6 26
